fixed horizontal scrollbar

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -10,7 +10,7 @@ body{
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   padding: 0 20px;
   border-bottom: 1px solid gray;
-  width: calc(100vw - 40px);
+  width: calc(100vw - 60px);
 }
 
 .left-cnt {
